3. Liquibase. Интеграционные тесты. [#95881]